2006-02-16 Marius Mauch <genone@gentoo.org>
	* euse: add/remove use flags even if there is no USE= statement in make.conf
	(bug #95432)

2006-02-16 Marius Mauch <genone@gentoo.org>
	* glsa-check: Fix bug causing the wrong summary to be displayed 
	for --test --verbose (bug #123084)

2006-02-06 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Reset PORTAGE_NICENESS, so that emerge is not niced
	twice. Thanks to Lukas Reck for the patch. (Bug 121482)

2006-01-24 Marius Mauch <genone@gentoo.org>
	* glsa-check: Use vbd information in verbose list mode (patch by solar)

2006-01-18 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Add capability to check libtool .la files for
	non-existant references.

2006-01-06 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Fix revdep-rebuild to play nicely with portage-2.1
	(Bug 118124)

2005-12-28 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Fix to automatically determine how to call find (Bug 111203)

2005-12-19 Paul Varner <fuzzyray@gentoo.org>
	* eclean: Add regular expression matching for exclude files (Bug 114365)

2005-12-13 Paul Varner <fuzzyray@gentoo.org>
	* equery: Fix USE flag parsing. (Bug 115294)

2005-12-07 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Fix revdep-rebuild to work with findutils-4.2.27.
	(bug 111203)
	* equery: Added note to error message about quoting redirection
	characters. (Bug 113423)
	* gentoolkit: Removed python-config call from make file. (Bug 113386)

2005-11-23 Paul Varner <fuzzyray@gentoo.org>
	* equery: Changed default behavior for equery list to search for
	partial name matches. Added equery list examples to the equery man
	page. (Bugs 113032, 113134)

2005-11-15 Marius Mauch <genone@gentoo.org>
	* glsa-check: Changed several messages to stderr instead of stdout
	* glsa-check: Added new --cve option as requested by solar (bug 98589)
	* glsa-check: Added support for a EMERGE_OPTS env variable to modify the emerge call of glsa-check --fix